# $Id$

Griffith ChangeLog
------------------
(c) 2005 Vasco Nunes

---- 0.5 ----

2005-11-11 Piotr Ozarowski <ozarow@gmail.com>
	* HTML export plugin updated to v3.3
	* Updated polish translation

2005-11-11 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Fixed lots of poster operations bugs
	* Added cgi module include on windows py2exe script (used by amazon.py module)
	* Added PIL module include on windows py2exe script
	* Portuguese language file updated

2005-11-10 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added some cyclic garbage collector calls that really should improve memory management when using large db collections

2005-11-09 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added a list to choose from when fetching big posters from Amazon.com and an exact match is not found.

2005-11-07 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Big posters fetched from Amazon are now previewed on built-in poster viewer.

2005-11-05 Piotr Ozarowski <ozarow@gmail.com>
	* Media names are now stored in database
	* Updated polish translation

2005-11-04 Vasco Nunes <vasco.m.nunes@gmail.com>
	* On darwin and win32 platforms the poster viewer should not use enter/leave events anymore. Pygtk seems buggy when handling these.
	* Added initial support to fetch bigger posters using Amazon Web Services. TODO: select poster to use when more than one found. Using the first one for now.
	* Added original Mark Pilgrim's amazon python wrapper to core distribution

2005-10-29 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added some HTML export plugin fixes for win32 compatibility
	* Added a minor change to sql module for win32 poster paths compatibility. Needs to be tested under *nix to see if nothing is broken.
	* win32 build should use now the libwimp widget engine for better windows visual integration

2005-10-27 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added some minor changes for win32 compatibility
	* Now Griffith's dir defaults to localized 'My Documents' dir on win32 environments
